static/css/main.css
/* ... */
/*----------------------------------------------
  Area: Incoming
---------------------------------------------- */

.content-incoming .sidebar p {
  margin: 25px 0;
  font-size: 14px;
  line-height: 1.5;
  color: #444;
}

.content-incoming .sidebar h3 {
  font-size: 22px;
  margin: 28px 0;
  font-weight: bold;
}

.content-incoming .sidebar h4 {
  font-size: 15px;
  font-weight: bold;
}


.incoming-header {
  align-items: center;
  background: linear-gradient(to bottom, rgba(255,255,255,0), #fff calc(100% - 6px), #eee);
  display: flex;
  flex-direction: column;
  padding: 16px 20px;
  cursor: pointer;
}

.incoming-header::before {
  background: url('/static/images/incoming-header.svg') center no-repeat;
  background-size: 100%;
  content: '';
  display: block;
  height: 115px;
  max-width: 100%;
  width: 395px;
}

.incoming-header--title {
  margin-top: 8px;
}

@media screen and (min-width: 768px) {

  .incoming-header {
    flex-direction: row;
  }

  .incoming-header--title {
    font-size: 1.75em;
    margin-left: 20px;
    margin-top: 0;
  }
}

.incoming-reload {
  text-align: center;
}

/* this is awful*/
.content-incoming h3 {
  padding:15px;
  font-size:25px;
}
.content-incoming .body  p{
  padding:10px;
  font-size:15px;

}

/*----------------------------------------------
  Area: Dashboard
---------------------------------------------- */

.notification-block {
  border-radius: 10px;
  margin-bottom: 20px;
}

.notification-block-follow {
  background-color: #e5fcff;
  color: #ff0080;
}

.notification-block-save {
  background-color: #fffbd9;
  color: #ff8400;
}

.notification-block-like {
  color: #ff1c1c;
  background-color: #ffd4d4;
}

.notification-block-comment {
  color: #00AEFF;
  background-color: #DAF3FF;
}

.notification-block-invitations {
  color: #ff0080;
  background-color: #ffcfe7;
}

.notification-block-shakeinvitation {
  color: #0caf8b;
  background-color: #dfffcb;
}

.notification-block-invitation-request {
  color: #0caf8b;
  background-color: #dfffcb;
}

.notification-block-invitation-approved {
  color: #0caf8b;
  background-color: #dfffcb;
}

.notification-block-aggregate {
  color: #ff0080;
  background-color: #e5fdff;
}

.notification-block-hd {
  font-weight: bold;
  padding: 15px;
  cursor: pointer;
}

.notification-block-bd {
  display: none;
  padding: 0 10px 10px;
}

.notification-block-bd .notification {
  background-color: #fff;
  padding: 10px;
  border-radius: 10px;
  position: relative;
  word-wrap: break-word;
  overflow-wrap: break-word;
}

.notification-block-bd .notification::after {
  content: "";
  display: table;
  clear: both;
}

.notification-block-bd .notification + .notification {
  margin-top: 10px;
}

.notification-block-bd .notification .notification-close {
  position: absolute;
  top: 10px;
  right: 5px;
  outline: none;
}

.notification-block-bd .notification .thumb {
  float: left;
  width: 100px;
  background-color: #fff;
  text-align: center;
  padding-right: 10px;
}

.notification-block-bd .notification .context {
 color: #4b4b4b;
 line-height: 1.2;
 font-size: 12px;
 overflow: hidden;
}

.notification-block-bd .clear-all {
  clear: both;
  text-align: right;
  margin-top: 10px;
}

/* Notification block for new followers */

.notification-block-follow .user-follow .follow {
  width: 180px;
}

.notification-block-follow .user-follow h4 {
  padding-right: 20px;
  padding-bottom: 5px;
  color: #555;
}

.notification-block-follow .user-follow h4 a {
  float: none;
}

/* Notification block for invitations */

.notification-block-invitations .notification-block-hd {
  position: relative;
}

.notification-block-invitations .notification-block-hd span.invitation-dude {
  position: absolute;
  background: transparent url('/static/images/invitation-dude.svg') 0 0 no-repeat;
  height: 63px;
  width: 84px;
  top: -4px;
  right: 10px;
}

.notification-block-bd .invitation-form {
  color: #4b4b4b;
  background-color: #fff;
  padding: 10px;
  color: #4b4b4b;
  margin: 0 10px 10px 10px;
  list-style: none;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  font-size: 14px;
}

.notification-block-bd .invitation-form li {
  margin: 5px 5px 5px 10px;
  font-weight: bold;
}

.notification-block-bd .invitation-form p {
  margin: 10px 0;
}

.notification-block-bd .invitation-form .input-text {
  margin-bottom: 10px;
  border: 1px solid #ccc;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  padding: 5px;
  color: #333;
  width: 230px;
  font-weight: bold;
}

.notification-block-bd .invitation-form .submit-button {
  float: right;
}

/* Shake Invitation Approved Notifications */

.notification-block-invitation-approved .notification {
  font-size: 14px;
  line-height: 1.3;
  color: #333;
}

/* Shake Invitation Notifications */

.notification-block-shakeinvitation .shake-thumb {
  width: 48px;
  float: left;
}

.notification-block-shakeinvitation h4 {
  padding-top: 10px;
  float: left;
  width:185px;
  font-size: 30px;
  font-weight: bold;
  margin-left: 10px;
}

.notification-block-shakeinvitation h4 a {
  text-decoration: none;
  color: #0caf8b;
}

.notification-block-shakeinvitation .shake-context {
  clear: both;
  width: 245px;
  float: left;
  margin-top: 10px;
  font-size: 14px;
  line-height: 1.3;
  color: #4b4b4b;
}

.notification-block-shakeinvitation .shake-context a {
  font-weight: bold;
  color: #ff0080;
}

.notification-block-shakeinvitation .buttons {
  clear: both;
  float: left;
  margin-top: 10px;
  width: 245px;
}

.notification-block-shakeinvitation .buttons form {
  float: left;
}

.notification-block-shakeinvitation .shake-accept-invitation {
  margin-right: 10px;
}

/* Notification block for Shake Invitation Request */

.notification-block-invitation-request .notification a {
    color: #ff0080;
}

.notification-block-invitation-request .notification {
  font-size: 14px;
  line-height: 1.3;
  color: #333;
}
/* ... */

